agents/helpers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    QUOTED_STRING
    URI

Grammar

Rule 0     S' -> statement
Rule 1     statement -> axiom statement
Rule 2     statement -> axiom
Rule 3     axiom -> negation
Rule 4     axiom -> universal
Rule 5     axiom -> existential
Rule 6     axiom -> conjunction
Rule 7     axiom -> disjunction
Rule 8     axiom -> implication
Rule 9     axiom -> biconditional
Rule 10    axiom -> predicate
Rule 11    base_axiom -> negation
Rule 12    base_axiom -> universal
Rule 13    base_axiom -> existential
Rule 14    base_axiom -> conjunction
Rule 15    base_axiom -> disjunction
Rule 16    base_axiom -> implication
Rule 17    base_axiom -> biconditional
Rule 18    base_axiom -> predicate
Rule 19    negation -> LPAREN NOT axiom RPAREN
Rule 20    conjunction -> LPAREN AND axiom_list RPAREN
Rule 21    conjunction -> LPAREN AND error
Rule 22    disjunction -> LPAREN OR axiom_list RPAREN
Rule 23    disjunction -> LPAREN OR error
Rule 24    axiom_list -> axiom axiom_list
Rule 25    axiom_list -> axiom
Rule 26    implication -> LPAREN IF axiom axiom RPAREN
Rule 27    implication -> LPAREN IF error
Rule 28    implication -> LPAREN IF axiom error
Rule 29    biconditional -> LPAREN IFF axiom axiom RPAREN
Rule 30    biconditional -> LPAREN IFF error
Rule 31    biconditional -> LPAREN IFF axiom error
Rule 32    existential -> LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
Rule 33    existential -> LPAREN EXISTS LPAREN error
Rule 34    existential -> LPAREN EXISTS LPAREN nonlogicals RPAREN error
Rule 35    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
Rule 36    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
Rule 37    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
Rule 38    universal -> LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
Rule 39    universal -> LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
Rule 40    predicate -> LPAREN NONLOGICAL parameter RPAREN
Rule 41    predicate -> LPAREN NAME_STRING parameter RPAREN
Rule 42    predicate -> LPAREN SET parameter RPAREN
Rule 43    predicate -> LPAREN NONLOGICAL error RPAREN
Rule 44    parameter -> function parameter
Rule 45    parameter -> nonlogicals parameter
Rule 46    parameter -> function
Rule 47    parameter -> nonlogicals
Rule 48    function -> LPAREN NONLOGICAL parameter RPAREN
Rule 49    function -> LPAREN NONLOGICAL error RPAREN
Rule 50    nonlogicals -> NONLOGICAL nonlogicals
Rule 51    nonlogicals -> NONLOGICAL

Terminals, with rules where they appear

AND                  : 20 21
COMMENT              : 
EXISTS               : 32 33 34
FORALL               : 35 36 37 38 39
IF                   : 26 27 28
IFF                  : 29 30 31
LPAREN               : 19 20 21 22 23 26 27 28 29 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 48 49
NAME_STRING          : 41
NONLOGICAL           : 40 43 48 49 50 51
NOT                  : 19
OR                   : 22 23
QUOTED_STRING        : 
RPAREN               : 19 20 22 26 29 32 32 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 48 49
SET                  : 42
URI                  : 
error                : 21 23 27 28 30 31 33 34 36 37 38 39 39 43 49

Nonterminals, with rules where they appear

axiom                : 1 2 19 24 25 26 26 28 29 29 31 32 35 36 38 39
axiom_list           : 20 22 24
base_axiom           : 
biconditional        : 9 17
conjunction          : 6 14
disjunction          : 7 15
existential          : 5 13
function             : 44 46
implication          : 8 16
negation             : 3 11
nonlogicals          : 32 34 35 36 37 38 39 45 47 50
parameter            : 40 41 42 44 45 48
predicate            : 10 18
statement            : 1 0
universal            : 4 12

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . axiom statement
    (2) statement -> . axiom
    (3) axiom -> . negation
    (4) axiom -> . universal
    (5) axiom -> . existential
    (6) axiom -> . conjunction
    (7) axiom -> . disjunction
    (8) axiom -> . implication
    (9) axiom -> . biconditional
    (10) axiom -> . predicate
    (19) negation -> . LPAREN NOT axiom RPAREN
    (35) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (32) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> . LPAREN EXISTS LPAREN error
    (34) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (20) conjunction -> . LPAREN AND axiom_list RPAREN
    (21) conjunction -> . LPAREN AND error
    (22) disjunction -> . LPAREN OR axiom_list RPAREN
    (23) disjunction -> . LPAREN OR error
    (26) implication -> . LPAREN IF axiom axiom RPAREN
    (27) implication -> . LPAREN IF error
    (28) implication -> . LPAREN IF axiom error
    (29) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (30) biconditional -> . LPAREN IFF error
    (31) biconditional -> . LPAREN IFF axiom error
    (40) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (41) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (42) predicate -> . LPAREN SET parameter RPAREN
    (43) predicate -> . LPAREN NONLOGICAL error RPAREN

    LPAREN          shift and go to state 11

    statement                      shift and go to state 1
    axiom                          shift and go to state 2
    negation                       shift and go to state 3
    universal                      shift and go to state 4
    existential                    shift and go to state 5
    conjunction                    shift and go to state 6
    disjunction                    shift and go to state 7
    implication                    shift and go to state 8
    biconditional                  shift and go to state 9
    predicate                      shift and go to state 10

state 1

    (0) S' -> statement .



state 2

    (1) statement -> axiom . statement
    (2) statement -> axiom .
    (1) statement -> . axiom statement
    (2) statement -> . axiom
    (3) axiom -> . negation
    (4) axiom -> . universal
    (5) axiom -> . existential
    (6) axiom -> . conjunction
    (7) axiom -> . disjunction
    (8) axiom -> . implication
    (9) axiom -> . biconditional
    (10) axiom -> . predicate
    (19) negation -> . LPAREN NOT axiom RPAREN
    (35) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (32) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> . LPAREN EXISTS LPAREN error
    (34) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (20) conjunction -> . LPAREN AND axiom_list RPAREN
    (21) conjunction -> . LPAREN AND error
    (22) disjunction -> . LPAREN OR axiom_list RPAREN
    (23) disjunction -> . LPAREN OR error
    (26) implication -> . LPAREN IF axiom axiom RPAREN
    (27) implication -> . LPAREN IF error
    (28) implication -> . LPAREN IF axiom error
    (29) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (30) biconditional -> . LPAREN IFF error
    (31) biconditional -> . LPAREN IFF axiom error
    (40) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (41) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (42) predicate -> . LPAREN SET parameter RPAREN
    (43) predicate -> . LPAREN NONLOGICAL error RPAREN

    $end            reduce using rule 2 (statement -> axiom .)
    LPAREN          shift and go to state 11

    axiom                          shift and go to state 2
    statement                      shift and go to state 12
    negation                       shift and go to state 3
    universal                      shift and go to state 4
    existential                    shift and go to state 5
    conjunction                    shift and go to state 6
    disjunction                    shift and go to state 7
    implication                    shift and go to state 8
    biconditional                  shift and go to state 9
    predicate                      shift and go to state 10

state 3

    (3) axiom -> negation .

    LPAREN          reduce using rule 3 (axiom -> negation .)
    $end            reduce using rule 3 (axiom -> negation .)
    RPAREN          reduce using rule 3 (axiom -> negation .)
    error           reduce using rule 3 (axiom -> negation .)


state 4

    (4) axiom -> universal .

    LPAREN          reduce using rule 4 (axiom -> universal .)
    $end            reduce using rule 4 (axiom -> universal .)
    RPAREN          reduce using rule 4 (axiom -> universal .)
    error           reduce using rule 4 (axiom -> universal .)


state 5

    (5) axiom -> existential .

    LPAREN          reduce using rule 5 (axiom -> existential .)
    $end            reduce using rule 5 (axiom -> existential .)
    RPAREN          reduce using rule 5 (axiom -> existential .)
    error           reduce using rule 5 (axiom -> existential .)


state 6

    (6) axiom -> conjunction .

    LPAREN          reduce using rule 6 (axiom -> conjunction .)
    $end            reduce using rule 6 (axiom -> conjunction .)
    RPAREN          reduce using rule 6 (axiom -> conjunction .)
    error           reduce using rule 6 (axiom -> conjunction .)


state 7

    (7) axiom -> disjunction .

    LPAREN          reduce using rule 7 (axiom -> disjunction .)
    $end            reduce using rule 7 (axiom -> disjunction .)
    RPAREN          reduce using rule 7 (axiom -> disjunction .)
    error           reduce using rule 7 (axiom -> disjunction .)


state 8

    (8) axiom -> implication .

    LPAREN          reduce using rule 8 (axiom -> implication .)
    $end            reduce using rule 8 (axiom -> implication .)
    RPAREN          reduce using rule 8 (axiom -> implication .)
    error           reduce using rule 8 (axiom -> implication .)


state 9

    (9) axiom -> biconditional .

    LPAREN          reduce using rule 9 (axiom -> biconditional .)
    $end            reduce using rule 9 (axiom -> biconditional .)
    RPAREN          reduce using rule 9 (axiom -> biconditional .)
    error           reduce using rule 9 (axiom -> biconditional .)


state 10

    (10) axiom -> predicate .

    LPAREN          reduce using rule 10 (axiom -> predicate .)
    $end            reduce using rule 10 (axiom -> predicate .)
    RPAREN          reduce using rule 10 (axiom -> predicate .)
    error           reduce using rule 10 (axiom -> predicate .)


state 11

    (19) negation -> LPAREN . NOT axiom RPAREN
    (35) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> LPAREN . FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> LPAREN . FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (32) existential -> LPAREN . EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> LPAREN . EXISTS LPAREN error
    (34) existential -> LPAREN . EXISTS LPAREN nonlogicals RPAREN error
    (20) conjunction -> LPAREN . AND axiom_list RPAREN
    (21) conjunction -> LPAREN . AND error
    (22) disjunction -> LPAREN . OR axiom_list RPAREN
    (23) disjunction -> LPAREN . OR error
    (26) implication -> LPAREN . IF axiom axiom RPAREN
    (27) implication -> LPAREN . IF error
    (28) implication -> LPAREN . IF axiom error
    (29) biconditional -> LPAREN . IFF axiom axiom RPAREN
    (30) biconditional -> LPAREN . IFF error
    (31) biconditional -> LPAREN . IFF axiom error
    (40) predicate -> LPAREN . NONLOGICAL parameter RPAREN
    (41) predicate -> LPAREN . NAME_STRING parameter RPAREN
    (42) predicate -> LPAREN . SET parameter RPAREN
    (43) predicate -> LPAREN . NONLOGICAL error RPAREN

    NOT             shift and go to state 13
    FORALL          shift and go to state 14
    EXISTS          shift and go to state 15
    AND             shift and go to state 16
    OR              shift and go to state 17
    IF              shift and go to state 18
    IFF             shift and go to state 19
    NONLOGICAL      shift and go to state 20
    NAME_STRING     shift and go to state 21
    SET             shift and go to state 22


state 12

    (1) statement -> axiom statement .

    $end            reduce using rule 1 (statement -> axiom statement .)


state 13

    (19) negation -> LPAREN NOT . axiom RPAREN
    (3) axiom -> . negation
    (4) axiom -> . universal
    (5) axiom -> . existential
    (6) axiom -> . conjunction
    (7) axiom -> . disjunction
    (8) axiom -> . implication
    (9) axiom -> . biconditional
    (10) axiom -> . predicate
    (19) negation -> . LPAREN NOT axiom RPAREN
    (35) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (32) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> . LPAREN EXISTS LPAREN error
    (34) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (20) conjunction -> . LPAREN AND axiom_list RPAREN
    (21) conjunction -> . LPAREN AND error
    (22) disjunction -> . LPAREN OR axiom_list RPAREN
    (23) disjunction -> . LPAREN OR error
    (26) implication -> . LPAREN IF axiom axiom RPAREN
    (27) implication -> . LPAREN IF error
    (28) implication -> . LPAREN IF axiom error
    (29) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (30) biconditional -> . LPAREN IFF error
    (31) biconditional -> . LPAREN IFF axiom error
    (40) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (41) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (42) predicate -> . LPAREN SET parameter RPAREN
    (43) predicate -> . LPAREN NONLOGICAL error RPAREN

    LPAREN          shift and go to state 11

    axiom                          shift and go to state 23
    negation                       shift and go to state 3
    universal                      shift and go to state 4
    existential                    shift and go to state 5
    conjunction                    shift and go to state 6
    disjunction                    shift and go to state 7
    implication                    shift and go to state 8
    biconditional                  shift and go to state 9
    predicate                      shift and go to state 10

state 14

    (35) universal -> LPAREN FORALL . LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> LPAREN FORALL . LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> LPAREN FORALL . LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> LPAREN FORALL . LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> LPAREN FORALL . error LPAREN nonlogicals RPAREN error axiom RPAREN

    LPAREN          shift and go to state 24
    error           shift and go to state 25


state 15

    (32) existential -> LPAREN EXISTS . LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> LPAREN EXISTS . LPAREN error
    (34) existential -> LPAREN EXISTS . LPAREN nonlogicals RPAREN error

    LPAREN          shift and go to state 26


state 16

    (20) conjunction -> LPAREN AND . axiom_list RPAREN
    (21) conjunction -> LPAREN AND . error
    (24) axiom_list -> . axiom axiom_list
    (25) axiom_list -> . axiom
    (3) axiom -> . negation
    (4) axiom -> . universal
    (5) axiom -> . existential
    (6) axiom -> . conjunction
    (7) axiom -> . disjunction
    (8) axiom -> . implication
    (9) axiom -> . biconditional
    (10) axiom -> . predicate
    (19) negation -> . LPAREN NOT axiom RPAREN
    (35) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (32) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> . LPAREN EXISTS LPAREN error
    (34) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (20) conjunction -> . LPAREN AND axiom_list RPAREN
    (21) conjunction -> . LPAREN AND error
    (22) disjunction -> . LPAREN OR axiom_list RPAREN
    (23) disjunction -> . LPAREN OR error
    (26) implication -> . LPAREN IF axiom axiom RPAREN
    (27) implication -> . LPAREN IF error
    (28) implication -> . LPAREN IF axiom error
    (29) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (30) biconditional -> . LPAREN IFF error
    (31) biconditional -> . LPAREN IFF axiom error
    (40) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (41) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (42) predicate -> . LPAREN SET parameter RPAREN
    (43) predicate -> . LPAREN NONLOGICAL error RPAREN

    error           shift and go to state 28
    LPAREN          shift and go to state 11

    axiom_list                     shift and go to state 27
    axiom                          shift and go to state 29
    negation                       shift and go to state 3
    universal                      shift and go to state 4
    existential                    shift and go to state 5
    conjunction                    shift and go to state 6
    disjunction                    shift and go to state 7
    implication                    shift and go to state 8
    biconditional                  shift and go to state 9
    predicate                      shift and go to state 10

state 17

    (22) disjunction -> LPAREN OR . axiom_list RPAREN
    (23) disjunction -> LPAREN OR . error
    (24) axiom_list -> . axiom axiom_list
    (25) axiom_list -> . axiom
    (3) axiom -> . negation
    (4) axiom -> . universal
    (5) axiom -> . existential
    (6) axiom -> . conjunction
    (7) axiom -> . disjunction
    (8) axiom -> . implication
    (9) axiom -> . biconditional
    (10) axiom -> . predicate
    (19) negation -> . LPAREN NOT axiom RPAREN
    (35) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom RPAREN
    (36) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error axiom RPAREN
    (37) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN error RPAREN
    (38) universal -> . LPAREN FORALL LPAREN nonlogicals RPAREN axiom error RPAREN
    (39) universal -> . LPAREN FORALL error LPAREN nonlogicals RPAREN error axiom RPAREN
    (32) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN axiom RPAREN
    (33) existential -> . LPAREN EXISTS LPAREN error
    (34) existential -> . LPAREN EXISTS LPAREN nonlogicals RPAREN error
    (20) conjunction -> . LPAREN AND axiom_list RPAREN
    (21) conjunction -> . LPAREN AND error
    (22) disjunction -> . LPAREN OR axiom_list RPAREN
    (23) disjunction -> . LPAREN OR error
    (26) implication -> . LPAREN IF axiom axiom RPAREN
    (27) implication -> . LPAREN IF error
    (28) implication -> . LPAREN IF axiom error
    (29) biconditional -> . LPAREN IFF axiom axiom RPAREN
    (30) biconditional -> . LPAREN IFF error
    (31) biconditional -> . LPAREN IFF axiom error
    (40) predicate -> . LPAREN NONLOGICAL parameter RPAREN
    (41) predicate -> . LPAREN NAME_STRING parameter RPAREN
    (42) predicate -> . LPAREN SET parameter RPAREN
    (43) predicate -> . LPAREN NONLOGICAL error RPAREN

    error           shift and go to state 31
    LPAREN          shift and go to state 11

    axiom_list                     shift and go to state 30
    axiom                          shift and go to state 29
    negation                       shift and go to state 3
    universal                      shift and go to state 4
    existential                    shift and go to state 5
    conjunction                    shift and go to state 6
    disjunction                    shift and go to state 7
    implication                    shift and go to state 8
    biconditional                  shift and go to state 9
    predicate                      shift and go to state 10

state 18
